# DriftBot

./: README.md
src/: autonomous_avoidance.py  drift_mpc.py  drift_world.sdf
src/driftbot_control/: package.xml  requirements.txt  setup.cfg  setup.py
src/driftbot_control/driftbot_control/: drift_controller.py  drift_mpc.py  driftbot_node.py
src/models/prius_hybrid/: model.sdf
src/models/prius_hybrid/meshes/: Audi_R8_Spyder.mtl
